examples/test/testpolicy16909.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16909
  namespace: namespace476
spec:
  podSelector:
    matchLabels:
      key21: value36
      key35: value34
      key12: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value9
          key23: value16
          key12: value47
      podSelector:
        matchLabels:
          key40: value18
          key16: value35
          key15: value19
